// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) WithTransactionWatch should render 1`] = `undefined`;

exports[`(Container) WithTransactionWatch will receive right actions 1`] = `
Object {
  "subscribers": Object {},
}
`;

exports[`(Container) WithTransactionWatch will receive right props 1`] = `
Object {
  "latestBlockNumber": 6716998,
}
`;
